prevent layout shifts during cart button generation

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -250,10 +250,12 @@ ul.offcanvas-nav {
 .cart-button {
   @include transition();
   display: flex;
+  width: 7rem;
   align-items: flex-start;
   flex-direction: row;
+  justify-content: space-between;
   background-color: #fff;
-  padding: 0.5rem 0.5rem;
+  padding: 0.5rem 0.7rem;
   border: 1px solid $hairline-color;
 }
 
